tring the github

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -161,7 +161,7 @@
         </section>
     </header>
     <main>
-        <h2>Welcome to the Travel Diary</h2>
+        <h2>Welcome to the best Travel Diary</h2>
         <p>Share your travel experiences and memories with friends and family.</p>
     </main>
 
