--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -237,7 +237,7 @@
         console.error('Error executing query:', err);
         return;
     }
-    document.querySelector('.rectangle1').style.backgroundImage = `url('${results}')`;
+    document.querySelector('.rectangle1').style.backgroundImage = url('${results}');
 });
     </script>
 </body>
