--- a/Login.html
+++ b/Login.html
@@ -7,37 +7,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-    <style>
-    
-    </style>
-
 </head>
 
 <body>
-   <div class="wrapper">
-    <form action="">
-        <h1>Login</h1>
-        <div class="input-box">
-            <input type="text" placeholder="Username" required>
-            <i class='bx bxs-user'></i>
-        </div>
-        <div class="input-box">
-            <input type="password" placeholder="Password" required>
-            <i class='bx bxs-lock-alt'></i>
-        </div>
-        <div class="remember-forget">
-            <label> <input type="checkbox"> Remember me</label>
-            <a href="#">Forget password?</a>
-        </div>
-        
-        <button type="submit" class="btn">Login</button>
-        <div class="regester-link">
-            <p>Don't have an Account ? <a href="#">Regester</a> </p>
-        </div>
-    </form>
-   </div>
-
+    <div class="wrapper">
+        <form id="loginForm" action="#">
+            <h1>Login</h1>
+            <div class="input-box">
+                <input type="text" placeholder="Username" required>
+                <i class='bx bxs-user'></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Password" required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+            <div class="remember-forget">
+                <label><input type="checkbox"> Remember me</label>
+            </div>
+            <button type="submit" class="btn" id="loginBtn">Login</button>
+            <a href="#" class="a">Forget password?</a>
+            <div class="register-link">
+                <p>Don't have an Account ? <a href="#">Register</a> </p>
+            </div>
+        </form>
+    </div>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the default form submission
+            window.location.href = 'HomeScreen.html'; // Redirect to HomeScreen.html
+        });
+    </script>
 </body>
-
 </html>
