--- a/public/login2.html
+++ b/public/login2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Modern Login Page | AsmrProg</title>
+    <title>sign-in sign-up Page </title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
@@ -18,7 +18,7 @@
         }
 
         body {
-            background-image: url("css/loginback.jpg");
+            background-image: url("../photos/loginback.jpg");
             display: flex;
             align-items: center;
             justify-content: center;
@@ -289,7 +289,7 @@
 
 
     </script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
