--- a/public/Home.html
+++ b/public/Home.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         
-        <h2>Welcome to Travel Diary</h2>
+        <h2 class="greeting"></h2>
         <h3>Share your travel experiences and memories.</h3>
     </header>
     <br>
